# bazzite-updater

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml
src/: config.rs  main.rs
