[package]
name = "bazzite-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
openssh = "0.10.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.39.2", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wakey = "0.3.0"
